workloads/navidrome/overlays/prod/deployment-patch.yaml
---
apiVersion: apps/v1
kind: Deployment

metadata:
  name: navidrome-deployment

spec:
  replicas: 1
  revisionHistoryLimit: 1
