workloads/navidrome/overlays/prod/gateway-patch.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: navidrome-https

spec:
  hostnames:
    - navidrome.sidewinder.lan

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute

metadata:
  name: navidrome-http

spec:
  hostnames:
    - navidrome.sidewinder.lan
